force/src/objects/Alert_ID_Criteria__c.object
<CustomObject>
    <description>This object is used to associate Cases with DivisionID and/or ClientID to an Alert.</description>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <referenceTo>Alerts_and_notification__c</referenceTo>
        <relationshipLabel>Alert ID Criterion</relationshipLabel>
        <relationshipName>Alert_ID_Criterion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionID__c</fullName>
        <label>DivisionID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Alert ID Criteria</label>
    <nameField>
        <displayFormat>MPC-{0000000000}</displayFormat>
        <label>MPC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert ID Criterion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>